--- a/stylesheets/firefox.css
+++ b/stylesheets/firefox.css
@@ -71,7 +71,6 @@ body {
 	color: black;
 	background: white;
 	font-family: sans-serif;
-	overflow-x: hidden;
 	-webkit-text-size-adjust: none;
 }
 
