--- a/stylesheets/wii.css
+++ b/stylesheets/wii.css
@@ -76,7 +76,6 @@ body {
 	color: black;
 	background: white;
 	font-family: sans-serif;
-	overflow-x: hidden;
 	-webkit-text-size-adjust: none;
 }
 
